<resources>
    <string name="app_name">CACHE-ING!</string>

    <string name="api_key_MapandPlaces">AIzaSyA2FO0ykhMK2VaSlx2JVVpAcWfjVRFWyu4</string>

    <string name="username_textView">Username</string>
    <string name="username_editText">Enter email...</string>

    <string name="password_textview">Password</string>
    <string name="password_editText">Enter password...</string>
    <string name="pick_password">6-12 characters, at least one #</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="login_button1">Login</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="sign_in_button">Sign In</string>

    <string name="register_button">Register</string>


    <string name="email_text">Email</string>
    <string name="enter_email">Enter Valid Email</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>

    <string name="verify_email">Verification Code</string>
    <string name="verify_code">Enter Verification Code</string>
    <string name="submit_verification_code">Verify</string>

    <string name="have_an_account">Don\'t have an account?</string>
    <string name="sign_up_here_textbutton">SignUp</string>
    <string name="title_activity_map">CACHE-ING!</string>

    <string name="add_signature">Sign Log</string>
    <string name="review_log">View Log</string>
    <string name="done">Done</string>

    <string name="save_login_info">Save Login Information?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
