<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="group2.tcss450.uw.edu.cache_ing_app.LoginFragment">

    <TextView
        android:id="@+id/username_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:text="@string/username_textView"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/username_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username_editText"
        android:gravity="center_horizontal"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/password_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_textview"
        android:gravity="center_horizontal"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/password_editText"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/loginbuttonapp"
        android:onClick="onClick"
        android:text="@string/sign_in_button" />

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:text="@string/forgot_password"
        android:onClick="onClick"
        android:clickable="true"/>

</LinearLayout>
